git-annex (6.20160212) UNRELEASED; urgency=medium

  * Support getting files from read-only repositories.

 -- Joey Hess <id@joeyh.name>  Fri, 12 Feb 2016 14:03:46 -0400

git-annex (6.20160211) unstable; urgency=medium

  * annex.addsmallfiles: New option controlling what is done when
    adding files not matching annex.largefiles.
  * Fix reversion in lookupkey, contentlocation, and examinekey which
    caused them to sometimes output side messages.
  * webapp: Fix deletion of current repository directory.
  * Added "nothing" to preferred content expression syntax.
  * annex.largefiles can be configured in .gitattributes too;
    this is particulary useful for v6 repositories, since the
    .gitattributes configuration will apply in all clones of the
    repository.
  * Limit annex.largefiles parsing to the subset of preferred content
    expressions that make sense in its context. So, not "standard"
    or "lackingcopies", etc.
  * annex.largefiles: Add support for mimetype=text/* etc, when git-annex
    is linked with libmagic.
  * matchexpression: Added --largefiles option to parse an annex.largefiles
    expression.
  * Brought back the dbus and xmpp build flags, so build from source can be
    done without C libraries that may be hard to install.
  * init: Fix bugs in submodule .git symlink fixup, that occurred when
    initializing in a subdirectory of a submodule and a submodule of a
    submodule.
  * WebDAV: Set depth 1 in PROPFIND request, for better compatibility with
    some servers. Thanks, wzhd.
  * WebDAV: Remove a bogus trailing slash from the end of the url to the
    temporary store location for a key. Thanks, wzhd.
  * S3: Allow configuring with requeststyle=path to use path-style bucket
    access instead of the default DNS-style access.

 -- Joey Hess <id@joeyh.name>  Thu, 11 Feb 2016 11:42:19 -0400

git-annex (6.20160126) unstable; urgency=medium

  * Fix nasty reversion in the last release that broke sync --content's