@@ -1,0 +1,9 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 1"""
+ date="2016-02-12T20:07:30Z"
+ content="""
+Makes sense, and also I will add a --batch mode to it.
+
+Done.
+"""]]
