@@ -1,6 +1,8 @@
 git-annex (6.20160212) UNRELEASED; urgency=medium
 
   * Support getting files from read-only repositories.
+  * checkpresentkey: Allow to be run without an explicit remote.
+  * checkpresentkey: Added --batch.
 
  -- Joey Hess <id@joeyh.name>  Fri, 12 Feb 2016 14:03:46 -0400
 
